# temp_lean-project_repo

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: dev.sh
src/: __init__.py  example.mjs  example.py
tests/: example.test.mjs  test_example.py
